@@ -1,4 +1,4 @@
-.TH SDPARM "8" "September 2012" "sdparm\-1.08" SDPARM
+.TH SDPARM "8" "December 2012" "sdparm\-1.08" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
